--- a/project/src/components/Card.css
+++ b/project/src/components/Card.css
@@ -8,10 +8,12 @@
 .card {
   background-color: #edefee;
   max-width: 300px;
+  max-height: 400px;
   border-radius: 16px 16px 0 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-top: 0px;
 }
 
 .card img {
